--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>www.nate-levine.com Resume</title>
+    <title>www.nate-levine.com Resume Working?</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-	<a href="./Nate A Levine Resume October 2022.pdf" download>
+	<a href="./Nate A Levine Resume October 2022.pdf" download>Resume</a>
   </body>
 </html>
