removed resume because it had personal info on it.

--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>www.nate-levine.com Resume Working?</title>
+    <title>Nate Levine</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-	<a href="./Nate A Levine Resume October 2022.pdf" download>Resume</a>
+    <h1>What's Up?</h1>
+    <p>This website is currently under construction.</p>
+    <p>Check back in a week.</p>
   </body>
 </html>
